<resources>
    <string name="app_name">Springs of India</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_my_activity">My Activity</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="splash_text">Springs Inventory</string>
    <string name="title_activity_splash">Arghyam</string>
    <string name="welcome_to_springs">Welcome to \n Springs of India</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="send_otp">Send Otp</string>
    <string name="browse_as_guest">Browse as Guest</string>
    <string name="title_activity_otp_verify">OtpVerifyActivity</string>
    <string name="four_digit_code">Enter 4 Digit Code</string>
    <string name="sms_was_sent">A 4 digit code is sent in an SMS to\n</string>
    <string name="resend">Resend code</string>
    <string name="verify">Verify</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full name</string>
    <string name="continue_button">continue</string>
    <string name="profile_details">Profile Details</string>
    <string name="profile_phone">phone</string>
    <string name="no_springs_nearby">No Springs Nearby</string>
    <string name="allow_location_permission">Please allow location permission to view springs near you</string>
    <string name="search_for_springs">Search for Springs</string>
    <string name="i_agree_to">I agree to &#032;</string>
    <string name="terms_and_conditions">Terms and Conditions &#032;</string>
    <string name="and">and &#032;</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="new_spring">New Spring</string>
    <string name="search_geography">Search by Geography</string>
    <string name="title_activity_spring_detials">Arghyam</string>
    <string name="add_discharge_data">ADD DISCHARGE DATA</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="spring_name">Spring Name</string>
    <string name="ownership">Ownership</string>
    <string name="spring_id">Spring ID</string>
    <string name="submitted_by">Submitted by</string>
    <string name="seasonality_of_the_spring">Seasonality of the Spring</string>
    <string name="spring_water_use">Spring Water Use</string>
    <string name="household_dependency">Household Dependency</string>
    <string name="add_additional_details">Add Additional Details</string>
    <string name="date">Date</string>
    <string name="discharge_lps">Discharge (lps)</string>
    <string name="search_hint">Search by spring name,location or ID</string>
    <string name="logout">Sign Out</string>
    <string name="FAQ">Frequently asked questions (FAQ)</string>
    <string name="signin_option">Sign in to have additional functions</string>
    <string name="or">OR</string>
    <string name="turn_on_location_desc">Please turn on location services to get the springs nearby</string>
    <string name="title_activity_add_discharge">AddDischargeActivity</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="discharge_data">Discharge Data</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="stop_watch">Stopwatch</string>
    <string name="average">Average</string>
    <string name="stop">Stop</string>
    <string name="start">START</string>
    <string name="submit">SUBMIT</string>
    <string name="perennial">Perennial</string>
    <string name="seasonal">Seasonal</string>
    <string name="domestic">Domestic</string>
    <string name="irrigation">Irrigation</string>
    <string name="industrial">Industrial</string>
    <string name="livestock">Livestock</string>
    <string name="number_household">Number of households</string>
    <string name="Jan">Jan</string>
    <string name="others">Others</string>
    <string name="max_image">Maximum 2 images</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="additional_details">Additional Details</string>
    <string name="view_attempts">View Attempts</string>
    <string name="capture">Capture</string>
    <string name="zero_time">00:00</string>
    <string name="add_discharge">Add Discharge Data</string>
    <string name="complete_details">Please Complete the details</string>
    <string name="select_months">Select seasonality months</string>
    <string name="select_season">Please select the appropriate seasonality of the spring</string>
    <string name="select_spring">Please select atleast one spring usage</string>
    <string name="enter_household">Please enter number of dependent households</string>
    <string name="back_confirmation">Are you sure you want to go back?</string>
    <string name="title_favourites">Favourites</string>
    <string name="time">1:35 PM</string>
    <string name="date_notification">April 21,2019</string>
    <string name="user_search_hint">Search by name or mobile number</string>
    <string name="no_recent_searches">No Recent Searches</string>
    <string name="search_results">Search Results</string>
    <string name="recent_search">Recent search</string>
    <string name="search_by_geography">Search by geography</string>
    <string name="discharge_image">Discharge image</string>
    <string name="version_number">Version 1.2.0</string>
    <string name="year_arghyam">\u00a9 2019 Arghyam Org</string>
    <string name="title_about">About</string>
    <string name="faq_title_one">How to update the app?</string>
    <string name="faq_question_one">
        <![CDATA[Go to Play Store, then tap Menu > My apps & games. Tap UPDATE next to ForWater.]]></string>

    <string name="faq_title_two">How to reply to a message?</string>
    <string name="faq_question_two">
        Tap and hold the message, then tap Reply . Type your response and tap Send . Alternatively, swipe right on the
        message to reply. To reply privately to someone who sent a message in a group, tap and hold the message, then
        tap More options > Reply privately
    </string>

    <string name="faq_title_three">How to update the app?</string>
    <string name="faq_question_three">
        <![CDATA[Go to Play Store, then tap Menu > My apps & games. Tap UPDATE next to ForWater. Alternatively, go to Play Store and search for ForWater. Tap UPDATE under ForWater.]]></string>
    <string name="email_us">Email us at</string>
    <string name="help_mail">help@arghyam.com</string>
    <string name="phone_us">Phone us at</string>
    <string name="help_num_one">+91 9876 543 210</string>
    <string name="help_num_two">+91 9876 543 211</string>
    <string name="title_faq">FAQs</string>
    <string name="title_help">Help</string>
    <string name="reviewer_rejected">Spring discharge data has been rejected</string>
    <string name="reviewer_accepted">Spring discharge data is approved</string>
    <string name="enter_proper">Please enter proper number</string>
    <string name="deduplicationActivity">deduplicationActivity</string>
</resources>
