<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".iam.ui.LoginActivity">


    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="1.25">

        <ImageView
             android:layout_width="match_parent"
             android:background="@drawable/ic_design"
             android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/login_title"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/welcome_to_springs"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="1.75">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:textSize="@dimen/sign_in"
            android:textColor="@color/bokara_grey"

        />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_marginTop="48dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/hint_mobile" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button android:layout_width="match_parent"
                android:text="@string/send_otp"
                android:id="@+id/sendOtpButton"
                android:layout_marginTop="40dp"
                android:background="@color/cornflower_blue"
                android:textColor="@color/white"
                android:layout_height="40dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_marginTop="32dp"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/browse_as_guest"
                  android:textSize="@dimen/browse_as_guest"
                  android:textAlignment="center"
                  android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>