<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/search_layout">


        <LinearLayout
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add additional details for Guarikand"
                    android:textColor="#262524"
                    android:textSize="14sp"
                    android:padding="16dp"
            />

            <View android:layout_height="2dp"
                  android:background="@color/gainsboro"
                  android:layout_width="match_parent"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@color/white">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seasonality_of_the_spring"
                        android:textColor="#595958"
                        android:textSize="14sp"
                />


                <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:paddingTop="16dp"
                        android:id="@+id/radioGroup_character">

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/perennial"
                            android:textSize="16sp"
                            android:textColor="#262524"
                            android:paddingLeft="16dp"
                            android:id="@+id/radioButton_pernnial"
                            android:checked="true" />


                    <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seasonal"
                            android:paddingLeft="16dp"
                            android:focusable="true"
                            android:textSize="16sp"
                            android:paddingRight="16dp"
                            android:textColor="#262524"
                            android:drawableRight="@drawable/ic_collapse_down"
                            android:id="@+id/radioButton_seasonal1"
                            android:checked="false" />
                </RadioGroup>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/calenderRecyclerview"
                        android:layout_width="match_parent"
                        android:paddingLeft="52dp"
                        android:visibility="gone"
                        android:paddingTop="16dp"
                        android:layout_height="wrap_content"/>

                <TextView
                       android:id="@+id/select_month_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       android:visibility="gone"
                        android:text="0 selected"
                        android:paddingLeft="52dp"
                        android:paddingTop="16dp"
                        android:textColor="#8C8C8B"
                        android:textSize="14sp"/>

            </LinearLayout>

            <View android:layout_height="2dp"
                  android:background="@color/gainsboro"
                  android:layout_width="match_parent"/>

            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:background="@color/white">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spring_water_use"
                            android:textColor="#595958"
                            android:textSize="14sp"
                            android:paddingBottom="16dp"
                    />

                    <CheckBox
                            android:id="@+id/domestic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/domestic"
                            android:textSize="16sp"
                            android:textColor="@color/ship_grey"
                            android:paddingLeft="16dp"
                   />
                    <CheckBox
                            android:id="@+id/irrigation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/irrigation"
                            android:paddingLeft="16dp"
                            android:textSize="16sp"
                            android:textColor="@color/ship_grey"
                            android:layout_marginTop="8dp"/>
                    <CheckBox
                            android:id="@+id/industrial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/industrial"
                            android:paddingLeft="16dp"
                            android:textSize="16sp"
                            android:textColor="@color/ship_grey"
                            android:layout_marginTop="8dp"/>
                    <CheckBox
                            android:id="@+id/livestock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:textColor="@color/ship_grey"
                            android:textSize="16sp"
                            android:text="@string/livestock"
                            android:layout_marginTop="8dp"/>

                <CheckBox
                        android:id="@+id/others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:textColor="@color/ship_grey"
                        android:textSize="16sp"

                        android:text="@string/others"
                        android:layout_marginTop="8dp"/>


            </LinearLayout>

            <View android:layout_height="2dp"
                      android:background="@color/gainsboro"
                      android:layout_width="match_parent"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@color/white">


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/household_dependency"
                        android:textColor="#595958"
                        android:textSize="14sp"

                />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/new_spring_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp">

                    <EditText
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/number_household"
                            android:textColorHint="#8C8C8B"
                            android:textSize="16sp"
                            android:textColor="#262524"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <View android:layout_height="0.5dp"
                  android:background="@color/gainsboro"
                  android:layout_width="match_parent"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



    <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

        <Button
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_height="40dp"/>

    </LinearLayout>

</RelativeLayout>

