<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".landing.ui.fragment.ErrorFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:title="@string/app_name"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/errorScreen"
            android:layout_marginTop="?attr/actionBarSize"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="80dp"
                android:src="@drawable/ic_drops"
                android:layout_height="80dp"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/no_springs_nearby"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_32"
                android:textColor="@color/bokara_grey"
                android:textSize="@dimen/text_size_18"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationPermission"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginLeft="@dimen/margin_64"
                    android:layout_marginRight="@dimen/margin_64"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/allow_location_permission"
                    android:layout_height="wrap_content"/>


            <Button
                    android:layout_width="200dp"
                    android:layout_marginTop="@dimen/margin_32"
                    android:textColor="@color/white"
                    android:id="@+id/continueButton"
                    android:text="@string/continue_button"
                    android:background="@color/colorPrimaryDark"
                    android:layout_height="45dp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>