<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="32dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".profile.ui.ProfileActivity">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
>

        <ImageView android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_gravity="center"
                   android:id="@+id/back_icon"
                   app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="80dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="26sp"
                  android:textColor="#262524"
                  android:text="@string/profile_details"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_marginTop="49dp"
                android:layout_height="wrap_content"
        >

            <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:drawableRight="@drawable/approved_ick"
                    android:textSize="14sp"
                    android:editable="false"
                    android:focusable="false"
                    android:textColor="#de000000"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
        >

            <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textSize="14sp"
                    android:textColor="#de000000"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:layout_marginTop="40dp"
                android:text="@string/continue_button"
                android:background="@color/colorAccent"
                android:id="@+id/submit"
                tools:ignore="MissingConstraints"/>


    </LinearLayout>


</LinearLayout>